# vitallink

./: CMakeLists.txt  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp.overlay
include/: pmic_bq25155.h  ppg_engine.h  sensors_vitalink.h  vitalink_proto.h  vitalink_uuids.h
src/: main.c  pmic_bq25155.c  ppg_engine.c  sensors_vitalink.c
